use local copies of the files instead of pulling from gate.ac.uk